<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_content_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#204e55"
        android:drawableLeft="@drawable/capturesettingswhite"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/header_description_set_capture_settings"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_content_header_sensor_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_content_header"
        android:layout_below="@+id/text_view_content_header"
        android:background="#204e55"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingBottom="5dp"
        android:paddingLeft="100dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/header_description_sensor_info"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_sensor_motion_capture_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_content_header"
        android:layout_below="@+id/text_view_content_header_sensor_info"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:text="@string/label_text_view_sensor_motion_capture_settings"
        android:textColor="#204e55"
        android:textSize="22sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_list_header_sensor_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_sensor_motion_capture_settings"
        android:layout_below="@+id/text_view_sensor_motion_capture_settings"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_list_header_sensitivity"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_view_list_header_sensor_name"
        android:layout_toRightOf="@+id/text_view_list_header_sensor_name"
        android:gravity="center_horizontal"
        android:text="@string/capture_settings_sensors_list_header_sensitivity"
        android:textColor="#000000"
        android:textSize="18sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_list_header_samplerate"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_view_list_header_sensor_name"
        android:layout_toRightOf="@+id/text_view_list_header_sensitivity"
        android:gravity="center_horizontal"
        android:text="@string/capture_settings_sensors_list_header_sample_rate"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linear_layout_seekbar_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_list_header_sensitivity"
        android:layout_alignRight="@+id/text_view_list_header_sensitivity"
        android:layout_below="@+id/text_view_list_header_sensitivity"
        android:orientation="horizontal" >

        <com.biomx.android.client.widget.XTextView
            android:id="@+id/text_view_seekbar_header_2g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/seekbar_header_2g"
            android:textColor="#9fb3b6"
            android:textSize="15sp" />

        <com.biomx.android.client.widget.XTextView
            android:id="@+id/text_view_seekbar_header_4g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/seekbar_header_4g"
            android:textColor="#9fb3b6"
            android:textSize="15sp" />

        <com.biomx.android.client.widget.XTextView
            android:id="@+id/text_view_seekbar_header_8g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/seekbar_header_8g"
            android:textColor="#9fb3b6"
            android:textSize="15sp" />

        <com.biomx.android.client.widget.XTextView
            android:id="@+id/text_view_seekbar_header_16g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/seekbar_header_16g"
            android:textColor="#9fb3b6"
            android:textSize="15sp" />

        <com.biomx.android.client.widget.XTextView
            android:id="@+id/text_view_seekbar_header_100g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/seekbar_header_100g"
            android:textColor="#9fb3b6"
            android:textSize="15sp" />

        <com.biomx.android.client.widget.XTextView
            android:id="@+id/text_view_seekbar_header_400g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/seekbar_header_400g"
            android:textColor="#9fb3b6"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view_capture_settings_sensors"
        android:layout_width="700dp"
        android:layout_height="210dp"
        android:layout_alignLeft="@+id/text_view_sensor_motion_capture_settings"
        android:layout_alignRight="@string/capture_settings_sensors_list_header_sample_rate"
        android:layout_below="@+id/linear_layout_seekbar_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:divider="@null"
        android:dividerHeight="1dp" >
    </ListView>

    <View
        android:id="@+id/header_underline"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/list_view_capture_settings_sensors"
        android:layout_alignRight="@+id/list_view_capture_settings_sensors"
        android:layout_below="@+id/text_view_sensor_motion_capture_settings"
        android:background="@android:color/black" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_detailed_sesitivity_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/list_view_capture_settings_sensors"
        android:layout_below="@+id/list_view_capture_settings_sensors"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="@string/capture_settings_view_detailed_sesitivity_settings"
        android:textColor="#9fb3b6"
        android:textSize="15sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_detailed_sesitivity_settings_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_view_detailed_sesitivity_settings"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/text_view_detailed_sesitivity_settings"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:text="@string/capture_settings_view_detailed_sesitivity_settings_link"
        android:textColor="#01bad5"
        android:textSize="15sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_configure_data_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_content_header"
        android:layout_below="@+id/text_view_detailed_sesitivity_settings_link"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_text_view_configure_data_output"
        android:textColor="#204e55"
        android:textSize="22sp" />

    <View
        android:id="@+id/header_underline_configure_data_output"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/list_view_capture_settings_sensors"
        android:layout_alignRight="@+id/list_view_capture_settings_sensors"
        android:layout_below="@+id/text_view_configure_data_output"
        android:background="@android:color/black" />

    <com.biomx.android.client.widget.XCheckBox
        android:id="@+id/check_box_raw_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/list_view_capture_settings_sensors"
        android:layout_below="@+id/header_underline_configure_data_output"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:button="@drawable/drawable_border_checkbox_3f5154"
        android:paddingLeft="10dp"
        android:text="@string/label_check_box_configure_data_output_raw_data"
        android:textColor="#000000" />

    <com.biomx.android.client.widget.XCheckBox
        android:id="@+id/check_box_quaternions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/check_box_raw_data"
        android:layout_below="@+id/header_underline_configure_data_output"
        android:layout_toRightOf="@+id/check_box_raw_data"
        android:button="@drawable/drawable_border_checkbox_3f5154"
        android:paddingLeft="10dp"
        android:text="@string/label_check_box_configure_data_output_quaternions"
        android:textColor="#000000" />

    <com.biomx.android.client.widget.XButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:background="@drawable/drawable_button_blue"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/button_caption_back"
        android:textColor="@drawable/drawable_button_blue_text_color"
        android:textSize="20sp" >
    </com.biomx.android.client.widget.XButton>

    <com.biomx.android.client.widget.XButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/drawable_button_blue"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/button_caption_next"
        android:textColor="@drawable/drawable_button_blue_text_color"
        android:textSize="20sp" >
    </com.biomx.android.client.widget.XButton>

</RelativeLayout>