<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_session_container"
    android:layout_width="550dp"
    android:layout_height="match_parent"
    android:background="#dce3e4"
    android:padding="10dp" >

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_calibration_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/header_calibration_heading_dialog"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/image_calibrate_graphic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_calibration_header"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/header_calibration_heading_dialog"
        android:src="@drawable/calibrationgraphic" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_calibration_desc_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_calibrate_graphic"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/calibration_step_1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_calibration_desc_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_calibration_desc_1"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/calibration_step_2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <com.biomx.android.client.widget.XButton
        android:id="@+id/button_begin_calibration"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_calibration_desc_2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/drawable_button_transparent"
        android:gravity="center"
        android:text="@string/button_caption_begin_calibration"
        android:textColor="@drawable/drawable_button_blue_text_color"
        android:textSize="20sp" >
    </com.biomx.android.client.widget.XButton>

    <com.biomx.android.client.widget.XButton
        android:id="@+id/button_calibrate_again"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_begin_calibration"
        android:layout_below="@+id/text_view_calibration_desc_2"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/button_begin_calibration"
        android:background="@drawable/drawable_button_transparent"
        android:gravity="center"
        android:text="@string/button_caption_calibrate_again"
        android:textColor="@drawable/drawable_button_blue_text_color"
        android:textSize="20sp"
        android:visibility="gone" />

    <com.biomx.android.client.widget.XButton
        android:id="@+id/button_save_calibration_settings"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_begin_calibration"
        android:layout_below="@+id/text_view_calibration_desc_2"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/button_calibrate_again"
        android:background="@drawable/drawable_button_transparent"
        android:gravity="center"
        android:text="@string/button_caption_save_calibration_settings"
        android:textColor="@drawable/drawable_button_blue_text_color"
        android:textSize="20sp"
        android:visibility="gone" />

    <com.biomx.android.client.widget.XButton
        android:id="@+id/button_download"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_begin_calibration"
        android:layout_below="@+id/text_view_calibration_desc_2"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/button_save_calibration_settings"
        android:background="@drawable/drawable_button_transparent"
        android:gravity="center"
        android:text="@string/button_caption_download"
        android:textColor="@drawable/drawable_button_blue_text_color"
        android:textSize="20sp" >
    </com.biomx.android.client.widget.XButton>

    <com.biomx.android.client.widget.XButton
        android:id="@+id/button_close"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_begin_calibration"
        android:layout_below="@+id/text_view_calibration_desc_2"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/button_download"
        android:background="@drawable/drawable_button_transparent"
        android:gravity="center"
        android:text="@string/button_caption_close"
        android:textColor="@drawable/drawable_button_blue_text_color"
        android:textSize="20sp" />

</RelativeLayout>