<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_session_container"
    android:layout_width="550dp"
    android:layout_height="match_parent"
    android:background="#dce3e4"
    android:paddingBottom="10dp" >

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_content_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/header_sensitivity_settings_reference"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_list_header_setting"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_content_header"
        android:layout_below="@+id/text_view_content_header"
        android:gravity="right"
        android:text="@string/sensitivity_settings_list_header_setting"
        android:textColor="#000000"
        android:textSize="20sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_list_header_accg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_view_list_header_setting"
        android:layout_toRightOf="@+id/text_view_list_header_setting"
        android:gravity="center_horizontal"
        android:text="@string/sensitivity_settings_list_header_accg"
        android:textColor="#000000"
        android:textSize="20sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_list_header_gyrodps"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_view_list_header_setting"
        android:layout_toRightOf="@+id/text_view_list_header_accg"
        android:gravity="center_horizontal"
        android:text="@string/sensitivity_settings_list_header_gyrodps"
        android:textColor="#000000"
        android:textSize="20sp" />

    <com.biomx.android.client.widget.XTextView
        android:id="@+id/text_view_list_header_magnmga"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/text_view_list_header_setting"
        android:layout_toRightOf="@+id/text_view_list_header_gyrodps"
        android:gravity="center_horizontal"
        android:text="@string/sensitivity_settings_list_header_magnmga"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list_view_sensitivity_settings"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_alignLeft="@+id/text_view_list_header_setting"
        android:layout_alignRight="@+id/text_view_list_header_magnmga"
        android:layout_below="@+id/text_view_list_header_setting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:divider="@null"
        android:dividerHeight="3dp" >
    </ListView>

    <com.biomx.android.client.widget.XButton
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_view_sensitivity_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/drawable_button_transparent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/button_caption_done"
        android:textAllCaps="true"
        android:textColor="@drawable/drawable_button_blue_text_color"
        android:textSize="20sp" >
    </com.biomx.android.client.widget.XButton>

</RelativeLayout>